[gd_scene load_steps=6 format=3 uid="uid://cm1wpccpepime"]

[ext_resource type="Script" path="res://menus/pause_menu/pause_menu.gd" id="1_getxs"]
[ext_resource type="Shader" path="res://menus/pause_menu/pause_menu_blur.gdshader" id="2_hxhow"]
[ext_resource type="PackedScene" uid="uid://cgw438pdkorrb" path="res://menus/pause_menu/inventory_menu/inventory_menu.tscn" id="3_0ycix"]
[ext_resource type="PackedScene" uid="uid://djfho244tjv2a" path="res://menus/pause_menu/spells_menu/spells_menu.tscn" id="4_du8iu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnhip"]
shader = ExtResource("2_hxhow")
shader_parameter/lod = 0.917

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_getxs")

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tnhip")
offset_right = 1152.0
offset_bottom = 648.0

[node name="MenuTabs" type="TabContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.5
offset_top = -308.5
offset_right = 510.5
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Inventory" type="RichTextLabel" parent="MenuTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryMenu" parent="MenuTabs/Inventory" instance=ExtResource("3_0ycix")]
layout_mode = 1

[node name="Stats" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Spells" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="SpellsMenu" parent="MenuTabs/Spells" instance=ExtResource("4_du8iu")]

[node name="Quests" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Bonfires" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="System" type="RichTextLabel" parent="MenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 5
